--- a/education/templates/home_base.html
+++ b/education/templates/home_base.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>{% spaceless %}{% block title %}{{ misago_settings.forum_name }}{% endblock %}{% endspaceless %}</title>
+    <title>{% spaceless %}{% block title %}延河教育{% endblock %}{% endspaceless %}</title>
     <meta name="description" content="{% spaceless %}{% block meta-description %}{% endblock %}{% endspaceless %}">
-    <base href="{% url 'misago:index' %}">
     <link href="{% static 'misago/css/misago.css' %}" rel="stylesheet">
     <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{% static 'apple-touch-icon-152-precomposed.png' %}">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static 'apple-touch-icon-144-precomposed.png' %}">
