--- a/frontend/home/src/footer/style.less
+++ b/frontend/home/src/footer/style.less
@@ -14,11 +14,11 @@
 		div.up
 		{ 
 			height:33px; line-height:33px; img{display:block;} margin-bottom:12px; 
-			h4{ span{border-left:4px solid #4776e6; margin-right:5px;} font-size:16px; font-weight:normal;}
+			h4{ span{border-left:4px solid #4776e6; margin-right:5px;} .mix-F-h4(@c:white)}
 		}
 		div.down
 		{
-			font-weight:lighter; font-size:14px; color:white;
+			.mix-F-txt(@c:white);
 			a{display:inline-block; margin-right:10px; color:white;}
 		}
 	}
