--- a/frontend/home/src/header/style.less
+++ b/frontend/home/src/header/style.less
@@ -2,7 +2,7 @@
 
 .header
 {
-	border-bottom: 1px solid #e9e9e9; font-size: 14px;
+	border-bottom: 1px solid @BDC-split;
 	.headCont 
 	{ 
 		width: 1208px; margin:0 auto;  .ant-menu-horizontal{border: none;} 
@@ -12,7 +12,7 @@
 		{
 			float:right; height:47px; line-height:47px; font-size:24px; color:#23DA9E;
 			*{display:inline-block; vertical-align:middle;} 
-			span{font-size:14px;margin-left:10px; color:grey;}
+			span{margin-left:10px; .mix-F-txt}
 		}
 	}
 }
