--- a/frontend/home/src/homeCross-activity/style.less
+++ b/frontend/home/src/homeCross-activity/style.less
@@ -6,8 +6,8 @@
 	.crossCont
 	{
 		height:420px;width:1208px; margin:0 auto; text-align:center;
-		>h1{font-size:28px; font-weight:normal; color:#444444;}
-		>h4{font-size:16px; font-weight:lighter; color:#777777; margin-bottom:25px;}
+		>h1{.mix-F-h1}
+		>h5{.mix-F-h5(@c:@FC-second); margin-bottom:25px;}
 
 		div.icon{ font-size:42px; color:#d4d4d4; margin-top:132px;}
 		.slick-slider {padding:0;}
@@ -21,10 +21,10 @@
 				background-repeat:no-repeat;
 				border-radius:6px; margin:0 12px; height:100%; padding:72px 48px; text-align:left;
 				color:white;
-				h3{font-size:30px; font-weight:normal;}
-				p{font-size:14px; width:315px; margin:15px 0; font-weight:lighter;}
+				h2{.mix-F-h2(@c:white)}
+				p{.mix-F-txt(@c:white); width:315px; margin:15px 0; }
 				a{
-					display:block; background-color:#4776e6; width:110px; height:40px; border-radius:6px;
+					display:block; background-color:@primary-color; width:110px; height:40px; border-radius:6px;
 					text-align:center; line-height:40px; color:white; font-weight:lighter;
 					>*{display:inline-block; vertical-align:middle;}
 					font-size:20px; span{font-size:14px; }
