--- a/frontend/home/src/homeCross-course/style.less
+++ b/frontend/home/src/homeCross-course/style.less
@@ -9,11 +9,13 @@
 		.topBar
 		{
 			height:50px; line-height:50px;
-			.ant-menu-horizontal{border:none; font-size:14px;}
+			.ant-menu-horizontal{border:none;}
+			h1{.mix-F-h1}  
+			div.more a{.mix-F-txt(@c:@FC-second); &:hover{color:@primary-color;}}
 		}
 		.courses
 		{
-			height:550px; *{font-weight:lighter;}
+			height:550px;
 			.hotCard
 			{
 				height:550px; border:1px solid #F1F4F4;
@@ -26,17 +28,17 @@
 				.info
 				{
 					padding:16px; position:relative; height:90px;
-					h5{font-size:16px; color:#333333;}
-					p{font-size:14px; color:#333333; position:absolute; bottom:16px;}
+					h5{.mix-F-h5;}
+					p{.mix-F-txt; position:absolute; bottom:16px;}
 					a{
 						position:absolute; right:16px; bottom:16px; height:35px; width:85px; color:white;
-						background-color:#4776e6; border-radius:6px; line-height:35px; text-align:center;
+						background-color:@primary-color; border-radius:6px; line-height:35px; text-align:center;
 					}
 				}
 			}
 			.card
 			{
-				height:265px; border:1px solid #F1F4F4;
+				height:265px; border:1px solid @BDC-split;
 				.cover
 				{
 					height:175px; overflow:hidden; img{height:100%;}
@@ -44,10 +46,10 @@
 				.info
 				{
 					padding:16px; position:relative; height:90px;
-					h5{font-size:16px; color:#333333; line-height:18px;}
-					p{font-size:14px; color:#333333; position:absolute; bottom:16px;}
+					h5{.mix-F-h5(14px;); line-height:18px;}
+					p{.mix-F-txt; position:absolute; bottom:16px;}
 					a{
-						position:absolute; right:16px; bottom:16px; color:#009944; font-size:16px;
+						position:absolute; right:16px; bottom:16px; color:#009944; font-size:14px;
 					}
 				}
 			}
