--- a/home/templates/home_base.html
+++ b/home/templates/home_base.html
@@ -1,49 +1,32 @@
-{% load i18n staticfiles misago_json %}
 <!DOCTYPE html>
-<html lang="zh-cn">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>{% spaceless %}{% block title %}延河教育{% endblock %}{% endspaceless %}</title>
-    <meta name="description" content="{% spaceless %}{% block meta-description %}{% endblock %}{% endspaceless %}">
-    <link href="{% static 'misago/css/misago.css' %}" rel="stylesheet">
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{% static 'apple-touch-icon-152-precomposed.png' %}">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static 'apple-touch-icon-144-precomposed.png' %}">
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{% static 'apple-touch-icon-120-precomposed.png' %}">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static 'apple-touch-icon-114-precomposed.png' %}">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static 'apple-touch-icon-72-precomposed.png' %}">
-    <link rel="apple-touch-icon-precomposed" href="{% static 'apple-touch-icon-57-precomposed.png' %}">
-    <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
-  </head>
-  <body>
+<html lang="zh-cmn-Hans">
+<head>
+    <!-- 搜索引擎优化 -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="subject" content="创客在线教育">
+    <meta name="keywords" content="your keywords">
+    <meta name="author" content="author,email address">
+    <meta name="description" content="延河教育网站描述">
+    <meta name="url" content="https://example.com/">
+    <!-- favicon -->
+    <link rel="icon" href="static/image/favicon/logo_16.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="static/image/favicon/logo_32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="static/image/favicon/logo_48.png" sizes="48x48" type="image/png">
+    <link rel="icon" href="static/image/favicon/logo_62.png" sizes="62x62" type="image/png">
+    <link rel="icon" href="static/image/favicon/logo_192.png" sizes="192x192" type="image/png">
 
-    <div id="auth-message-mount"></div>
-    <div id="snackbar-mount"></div>
+    <!-- 主体 -->
+    <title>延河教育</title>
+    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="/static/css/style.css" />
+    <style type="text/css">
 
-    {% include "misago/jumbotron.html" %}
-    {% include "misago/navbar.html" %}
+    </style>
+</head>
+<body>
+    <div id="home"></div>
 
-    <div id="page-mount">
-      {% block content %}{% endblock content %}
-    </div>
-
-    {% include "misago/footer.html" %}
-    {% include "misago/posting.html" %}
-    {% include "misago/auth.html" %}
-
-    <div class="modal fade" id="modal-mount" tabindex="-1" role="dialog" aria-labelledby="misago-modal-label"></div>
-
-    <script type="text/javascript" src="/django-i18n.js"></script>
-    {% if LANGUAGE_CODE != "en-us" %}
-    <script type="text/javascript" src="/moment-i18n.js"></script>
-    {% endif %}
-    <script type="text/javascript" src="{% static 'misago/js/vendor.js' %}"></script>
-    <script type="text/javascript" src="{% static 'misago/js/misago.js' %}"></script>
-    {% include "misago/scripts.html" %}
-    <script type="text/javascript">
-      misago.init({{ frontend_context|as_json }});
-    </script>
-
-  </body>
+</body>
+<script src="http://localhost:8080/app.js"></script>
 </html>
