--- a/frontend/home/src/banner/style.less
+++ b/frontend/home/src/banner/style.less
@@ -3,13 +3,17 @@
 .banner
 {
 	height:460px; position:relative;
-	background-position:center;
-	background-size:cover;
-	background-repeat:no-repeat;
-	*{box-sizing:border-box;}	
+	*{box-sizing:border-box;}
+	.cover
+	{
+		height:460px;
+		background-position:center;
+		background-size:cover;
+		background-repeat:no-repeat;
+	}
 	.slogon
 	{
-		position: absolute; left:15%; top:200px; height:315px; width:290px;
+		position: absolute; left:10%; top:200px; height:315px; width:290px;
 		background-color:rgba(255,255,255,0.3); border-radius:6px; color:white;
 		overflow: hidden; padding:22px;
 		h1{.mix-F-h1(48px,white); span{color:@primary-color;}} 
