--- a/home/templates/home_base.html
+++ b/home/templates/home_base.html
@@ -25,7 +25,9 @@
     </style>
 </head>
 <body>
+    {% csrf_token %}
     <div id="home"></div>
+    
 
 </body>
 <script src="http://localhost:8080/app.js"></script>
