home page api ready

--- a/frontend/home/src/banner/style.less
+++ b/frontend/home/src/banner/style.less
@@ -10,6 +10,7 @@
 		background-position:center;
 		background-size:cover;
 		background-repeat:no-repeat;
+		a{ display:block; height:100%; width:100%; }
 	}
 	.slogon
 	{
