--- a/misago/templates/misago/footer.html
+++ b/misago/templates/misago/footer.html
@@ -30,9 +30,9 @@
         </ul>
       {% endif %}
 
-     <!--  <a href="http://misago-project.org" class="misago-branding">
+      <a href="http://misago-project.org" class="misago-branding">
         powered by <strong>misago</strong>
-      </a> -->
+      </a>
 
     </div>
   </div>
