--- a/frontend/forum/style/index.less
+++ b/frontend/forum/style/index.less
@@ -3,7 +3,7 @@
 // --------------------------------------------------
 
 // Path to Boostrap's LESS
-@bs: "../node_modules/bootstrap/less/";
+@bs: "../../node_modules/bootstrap/less/";
 
 // Core variables
 @import "@{bs}variables.less";
