--- a/frontend/home/src/banner/style.less
+++ b/frontend/home/src/banner/style.less
@@ -25,7 +25,7 @@
 			position:absolute; left:0; bottom:0; width:100%; height:55px;
 			background-color: @primary-color; padding:0 22px; line-height:55px;
 			.mix-F-txt(16px,white,lighter); .downArrow { float: right }
-			&:hover{ cursor:pointer; }
+			&:hover{ cursor:pointer; } border-radius: 0 0 6px 6px;
 		}
 	}
 }
