--- a/frontend/home/src/header/style.less
+++ b/frontend/home/src/header/style.less
@@ -9,6 +9,6 @@
 		.ant-menu-horizontal{border: none;} 
 		.logo { height:100%; margin-top:7px; img{display:block;} }
 		
-		#user-menu-mount{ float:right; min-width:10px; height:47px; color:red;}
+		#user-menu-mount{ float:right; min-width:10px; height:47px;}
 	}
 }
