--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -18,22 +18,24 @@ var home_context = {
                 {
                     "title":"{{ hotpot.title }}",
                     "image":"{{ hotpot.image.url }}",
-                    "link":"{{ hotpot.link }}"
+                    "link":"{{ hotpot.link }}",
+                    "date":"{{ hotpot.added|date:"Y年m月j日"}}",
                 },
             {% endfor %}
         ],
         "categories":[
                 {% for category in categories %}
                     {
-                        "slug":"{{ category.slug }}",
-                        "name":"{{ category.name }}",
+                        "title":"{{ category.name }}",
+                        "more":"#",
                         "lessons": [
                         {% for lesson in category.get_top_lessons %}
                             {
-                                "name":"{{ lesson.name }}",
+                                "title":"{{ lesson.name }}",
                                 "thumbnail":"{{ lesson.thumbnail.url }}",
                                 "link":"{{ lesson.get_link }}",
                                 "price":"{{ lesson.price }}",
+                                "time":"{{ lesson.get_all_time }}",
                                 "equipment":"{{ lesson.equipment }}",
                             },
                          {% endfor %}
@@ -47,9 +49,12 @@ var home_context = {
                     "title":"{{ activity.title }}",
                     "video":"{{ activity.video.url }}",
                     "thumbnail":"{{ activity.thumbnail.url }}",
+                    "profile":"{{ activity.description }}"
                 },
             {% endfor %}
         ]
     }
+    var misagoContext = {{ frontend_context|as_json }}
+    home_context["misagoContext"] = misagoContext
 </script>
 {% endblock %}
