--- a/frontend/home/src/homeCross-activity/style.less
+++ b/frontend/home/src/homeCross-activity/style.less
@@ -23,10 +23,11 @@
 				color:white;
 				h2{.mix-F-h2(@c:white)}
 				p{.mix-F-txt(@c:white); width:315px; margin:15px 0; }
-				a{
+				.playBtn
+				{
 					display:block; background-color:@primary-color; width:110px; height:40px; border-radius:6px;
 					text-align:center; line-height:40px; color:white; font-weight:lighter;
-					>*{display:inline-block; vertical-align:middle;}
+					>*{display:inline-block; vertical-align:middle;} cursor:pointer;
 					font-size:20px; span{font-size:14px; }
 				}
 			}
@@ -35,5 +36,5 @@
 }
 .player
 {
-	background-color: black;
+	background-color: black; height:525px;
 }
