--- a/frontend/home/src/header/style.less
+++ b/frontend/home/src/header/style.less
@@ -9,6 +9,15 @@
 		.ant-menu-horizontal{border: none;} 
 		.logo { height:100%; margin-top:7px; img{display:block;} }
 		
-		#user-menu-mount{ float:right; min-width:10px; height:47px;}
+		#user-menu-mount
+		{ 
+			float:right; min-width:10px; height:47px;
+			.nav.nav-guest{button{margin-left:10px;}}
+			.nav-user .dropdown-toggle
+			{
+				padding:8px;
+				img{width:34px; height:34px;}
+			} 
+		}
 	}
 }
