--- a/frontend/home/src/videoPlayPage/playerPanel/style.less
+++ b/frontend/home/src/videoPlayPage/playerPanel/style.less
@@ -3,7 +3,7 @@
 .playerPanel
 {
 	* { box-sizing:border-box; }
-	margin:32px 0; padding:24px; background-color:white; border:1px solid #f0f0f0;
+	margin:32px 0 24px; padding:24px; background-color:white; border:1px solid #f0f0f0;
 	>h1 {.mix-F-h5; margin-bottom:16px;}
 	.player
 	{
