videopage api ready

--- a/frontend/home/src/banner/style.less
+++ b/frontend/home/src/banner/style.less
@@ -18,8 +18,9 @@
 		background-color:rgba(255,255,255,0.3); border-radius:6px; color:white;
 		overflow: hidden; padding:22px;
 		h1{.mix-F-h1(48px,white); span{color:@primary-color;}} 
-		h2{.mix-F-h2(28px,white); span{color:@primary-color;}} 
-		h4{.mix-F-h4(20px,white);} p{.mix-F-txt(@c:white,@w:lighter);}
+		h2{.mix-F-h2(28px,white); span{color:@primary-color;}; margin:15px 0 35px; } 
+		h4{.mix-F-h4(20px,white);} 
+		p{.mix-F-txt(@c:white,@w:lighter); margin:15px 0;}
 		.bottom
 		{
 			position:absolute; left:0; bottom:0; width:100%; height:55px;
