--- a/frontend/home/src/homeCross-course/style.less
+++ b/frontend/home/src/homeCross-course/style.less
@@ -39,7 +39,25 @@
 			// &:hover{ top:-3px; box-shadow:0 20px 80px rgba(0,0,0,0.2);}
 			.cover
 			{
-				height:175px; overflow:hidden; img{height:100%;}
+				@H:175px;
+				height:@H; overflow:hidden; position:relative; img{height:100%;}
+				a.shade
+				{
+					transition: 0.4s ease-in-out; text-align:center; line-height:@H;
+					display:block; position:absolute; top:0; left:0; height:@H; width:100%;
+					background-color:rgba(0,0,0,0); color: white; font-size:18px; font-weight:300;
+
+					span
+					{ 
+						display:inline-block; vertical-align:middle; margin:0 5px; opacity:0;
+						position:relative; left:0; top:0; transition: 0.4s ease-in-out;
+					}
+					span.center{top:20px;}
+					span.left{height:1px; width:40px; background-color:white; left:-30px;}
+					span.right{height:1px; width:40px; background-color:white; left:30px;}
+
+					&:hover { background-color:rgba(0,0,0,0.7); span{opacity:1; top:0; left:0} }
+				}
 			}
 			.info
 			{
