--- a/frontend/home/src/videoPlayPage/guessYouLikePanel/style.less
+++ b/frontend/home/src/videoPlayPage/guessYouLikePanel/style.less
@@ -12,7 +12,24 @@
 			border:1px solid @BDC-split; margin:6px 0 20px;
 			.cover
 			{
-				overflow:hidden; img{width:100%;}
+				overflow:hidden; position:relative; img{width:100%;}
+				a.shade
+				{
+					transition: 0.4s ease-in-out; text-align:center; line-height:148px;
+					display:block; position:absolute; top:0; left:0; height:100%; width:100%;
+					background-color:rgba(0,0,0,0); color: white; font-size:18px; font-weight:300;
+
+					span
+					{ 
+						display:inline-block; vertical-align:middle; margin:0 5px; opacity:0;
+						position:relative; left:0; top:0; transition: 0.4s ease-in-out;
+					}
+					span.center{top:20px;}
+					span.left{height:1px; width:40px; background-color:white; left:-30px;}
+					span.right{height:1px; width:40px; background-color:white; left:30px;}
+
+					&:hover { background-color:rgba(0,0,0,0.7); span{opacity:1; top:0; left:0} }
+				}
 			}
 			.info
 			{
