--- a/frontend/home/src/videoPlayPage/style.less
+++ b/frontend/home/src/videoPlayPage/style.less
@@ -8,7 +8,7 @@
 	.ant-tabs-bar
 	{
 		background-color:#f6f8fe; font-size:16px;
-		border-bottom-color:@BDC-split;
+		border-bottom-color:#fdfdfd;
 		.ant-tabs-nav.ant-tabs-nav-animated
 		{
 			div[role='tab']{ border:none;padding:0 24px; height:46px;line-height:46px; }
