--- a/home/templates/home/lesson.html
+++ b/home/templates/home/lesson.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 {% block content %}
 {{ block.super }}
+<!-- <script src="http://localhost:8080/app.js"></script> -->
 <script src="{% static "js/video.js" %}"></script>
 <script>
 var lesson_add = {
