--- a/frontend/home/src/homeCross-activity/style.less
+++ b/frontend/home/src/homeCross-activity/style.less
@@ -7,7 +7,7 @@
 	{
 		height:420px;width:1208px; margin:0 auto; text-align:center;
 		>h1{.mix-F-h1}
-		>h5{.mix-F-h5(@c:@FC-second); margin-bottom:25px;}
+		>h5{.mix-F-h5(@c:@FC-second); margin:15px 0 25px;}
 
 		div.icon{ font-size:42px; color:#d4d4d4; margin-top:132px;}
 		.slick-slider {padding:0;}
