--- a/frontend/home/src/homeCross-lab/style.less
+++ b/frontend/home/src/homeCross-lab/style.less
@@ -19,7 +19,7 @@
 		{
 			height:366px; width:366px; padding:70px 60px; text-align:center;
 			img{display:inline-block;}
-			h1{.mix-F-h2} p{.mix-F-txt}
+			h1{.mix-F-h2; margin:10px 0;} p{.mix-F-txt}
 		}
 		.arrow
 		{
