--- a/frontend/home/src/homeCross-steam/style.less
+++ b/frontend/home/src/homeCross-steam/style.less
@@ -8,7 +8,7 @@
 	{
 		width:1208px; margin:0 auto; text-align:center;
 		>h1{.mix-F-h1;}
-		>h5{.mix-F-h5(@c:@FC-second); margin-bottom:25px;}
+		>h5{.mix-F-h5(@c:@FC-second); margin:15px 0 25px;}
 
 		.card
 		{
