--- a/frontend/home/src/videoPlayPage/playerPanel/style.less
+++ b/frontend/home/src/videoPlayPage/playerPanel/style.less
@@ -17,6 +17,7 @@
 
 	.videoInfo
 	{
+		height:480px;
 		.geekTeacher
 		{
 			height:85px; margin-bottom:25px;
@@ -25,10 +26,10 @@
 		}
 		.slick-slider
 		{
-			.toolRow{padding:12px 0;}
-			.slick-dots{right:-17px;}
+			position:relative; padding:0;
+			.slick-dots { position:absolute; top:275px; }
+			.toolRow>div{margin:10px 5px;}
 		}
-		
 	}
 
 	.getDevice
