--- a/home/templates/home/home_base.html
+++ b/home/templates/home/home_base.html
@@ -11,15 +11,20 @@
     <meta name="description" content="延河教育网站描述">
     <meta name="url" content="https://example.com/">
     <!-- favicon -->
-    <link rel="icon" href="static/image/favicon/logo_16.png" sizes="16x16" type="image/png">
-    <link rel="icon" href="static/image/favicon/logo_32.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="static/image/favicon/logo_48.png" sizes="48x48" type="image/png">
-    <link rel="icon" href="static/image/favicon/logo_62.png" sizes="62x62" type="image/png">
-    <link rel="icon" href="static/image/favicon/logo_192.png" sizes="192x192" type="image/png">
+    <link rel="icon" href="/static/image/favicon/logo_16.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="/static/image/favicon/logo_32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="/static/image/favicon/logo_48.png" sizes="48x48" type="image/png">
+    <link rel="icon" href="/static/image/favicon/logo_62.png" sizes="62x62" type="image/png">
+    <link rel="icon" href="/static/image/favicon/logo_192.png" sizes="192x192" type="image/png">
     <!-- 主体 -->
     <title>延河教育</title>
     <link rel="stylesheet" href="/static/css/reset.css" />
     <link rel="stylesheet" href="/static/css/style.css" />
+
+    <!-- video.js CDN -->
+    <link href="//cdn.bootcss.com/video.js/5.13.2/video-js.min.css" rel="stylesheet">
+    <script src="//cdn.bootcss.com/video.js/5.13.2/video.min.js"></script>
+
 </head>
 <body>
 {% csrf_token %}
