--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,8 +1,16 @@
 {% extends "home/home_base.html" %}
 {% load i18n staticfiles misago_json %}
+
+{% block head %}
+<!-- video.js CDN -->
+<link href="//cdn.bootcss.com/video.js/5.13.2/video-js.min.css" rel="stylesheet">
+<script src="//cdn.bootcss.com/video.js/5.13.2/video.min.js"></script>
+{% endblock %}
+
 {% block content %}
 {{ block.super }}
-<script src="{% static "js/home.js" %}"></script>
+<script src="http://localhost:8080/assets/app.js"></script>
+<!-- <script src="{% static "js/app.js" %}"></script> -->
 <script>
 var home_add = {
         "carousels":[
