--- a/home/templates/home/home_base.html
+++ b/home/templates/home/home_base.html
@@ -21,9 +21,8 @@
     <link rel="stylesheet" href="/static/css/reset.css" />
     <link rel="stylesheet" href="/static/css/style.css" />
 
-    <!-- video.js CDN -->
-    <link href="//cdn.bootcss.com/video.js/5.13.2/video-js.min.css" rel="stylesheet">
-    <script src="//cdn.bootcss.com/video.js/5.13.2/video.min.js"></script>
+    {% block head %}
+    {% endblock %}
 
 </head>
 <body>
