--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -3,6 +3,7 @@
 {% block content %}
 {{ block.super }}
 <script src="{% static "js/home.js" %}"></script>
+<!-- <script src="http://localhost:8080/assets/app.js"></script> -->
 <script>
 var home_add = {
         "carousels":[
