--- a/home/templates/home/lesson.html
+++ b/home/templates/home/lesson.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% block content %}
 {{ block.super }}
-<!-- <script src="http://localhost:8080/app.js"></script> -->
+<!-- <script src="http://localhost:8080/assets/app.js"></script> -->
 <script src="{% static "js/video.js" %}"></script>
 <script>
 var lesson_add = {
@@ -24,7 +24,8 @@ var lesson_add = {
                                 answer:"{{ quesion.answer }}"
                             },
                         {% endfor %}
-                        ]
+                        ],
+            other:'{{ lesson.description|safe }}'
         },
         "devices":[{% for device in lesson.equipment.all %}
                         {
